syntax = "proto3";

option csharp_namespace = "User";

service UserServiceGrpc {
    rpc GetUserByIdForAuth (UserRequest) returns (AuthUserResponse);
    rpc UpdateRefreshToken (RefreshTokenRequest) returns (AuthUserResponse);
}

message RefreshTokenRequest {
    int32 id = 1;
    string refresh_token = 2;
}

message UserRequest {
    int32 id = 1;
}

message AuthUserResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string age = 4;
    string username = 5;
    string email = 6;
    string password = 7;
    ROLES roles = 8;
    string refresh_token = 9;
}
enum ROLES{
     ADMIN = 0;
     CREATOR = 1;
     BASIC = 2;
}